[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils", "command-line-utilities"]
description = "Make Xcode project files from Cargo projects"
documentation = "https://lib.rs/crates/cargo-xcode"
homepage = "https://lib.rs/crates/cargo-xcode"
keywords = ["cargo", "subcommand", "xcode", "project"]
license = "MIT"
name = "cargo-xcode"
readme = "README.md"
repository = "https://gitlab.com/kornelski/cargo-xcode"
version = "1.3.2"
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
cargo_metadata = "0.14.1"
getopts = "0.2.21"
pathdiff = "0.2.1"
sha1 = "0.6.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
