[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils", "command-line-utilities"]
description = "Make Xcode project files from Cargo projects"
documentation = "https://lib.rs/crates/cargo-xcode"
homepage = "https://lib.rs/crates/cargo-xcode"
keywords = ["cargo", "subcommand", "xcode", "project", "integration"]
license = "MIT"
name = "cargo-xcode"
readme = "README.md"
repository = "https://gitlab.com/kornelski/cargo-xcode"
version = "1.6.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
cargo_metadata = "0.17.0"
crc = "3.0.1"
getopts = "0.2.21"
pathdiff = "0.2.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
maintenance = { status = "passively-maintained" }
